Updated index.html file

--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
 
         <!-- Styles -->
 
-        <link href="/styles/fontawesome.css" rel="stylesheet" type="text/css">
-        <link href="/styles/grid.css" rel="stylesheet" type="text/css">
-        <link href="/styles/styles.css" rel="stylesheet" type="text/css">
+        <link href="styles/fontawesome.css" rel="stylesheet" type="text/css">
+        <link href="styles/grid.css" rel="stylesheet" type="text/css">
+        <link href="styles/styles.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Source+Serif+Pro:400,700|Teko:400,700" rel="stylesheet">
 
 
         <!-- Favicons/Icons -->
 
-        <link rel="shortcut icon" href="/images/icons/favicon.ico">
+        <link rel="shortcut icon" href="images/icons/favicon.ico">
 
-        <link rel="apple-touch-icon" href="/images/icons/touch-icon-iphone.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="/images/icons/touch-icon-ipad.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="/images/icons/touch-icon-iphone-retina.png" />
-        <link rel="apple-touch-icon" sizes="144x144" href="/images/icons/touch-icon-ipad-retina.png" />
+        <link rel="apple-touch-icon" href="images/icons/touch-icon-iphone.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="images/icons/touch-icon-ipad.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="images/icons/touch-icon-iphone-retina.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="images/icons/touch-icon-ipad-retina.png" />
 
         <meta name="application-name" content="Site Tile"/>
         <meta name="msapplication-TileColor" content="#000000"/>
-        <meta name="msapplication-square70x70logo" content="/images/icons/tiny.png"/>
-        <meta name="msapplication-square150x150logo" content="/images/icons/square.png"/>
-        <meta name="msapplication-wide310x150logo" content="/images/icons/wide.png"/>
-        <meta name="msapplication-square310x310logo" content="/images/icons/large.png"/>
+        <meta name="msapplication-square70x70logo" content="images/icons/tiny.png"/>
+        <meta name="msapplication-square150x150logo" content="images/icons/square.png"/>
+        <meta name="msapplication-wide310x150logo" content="images/icons/wide.png"/>
+        <meta name="msapplication-square310x310logo" content="images/icons/large.png"/>
 
 
         <!-- Google Analytics Script -->
@@ -73,7 +73,7 @@
 
                         <h1 class="header__logomark d-inline text-white mr-2 mr-sm-4">Dave <span>Dechant</span></h1>
 
-                        <a class="header__link mr-2" href="work.php">Work</a>
+                        <a class="header__link mr-2" href="work.html">Work</a>
 
                         <a target="_blank" class="header__link" href="resume-dave-dechant.pdf">Resume</a>
 
@@ -115,13 +115,13 @@
 
                         <h2 class="work-nav__title text-white">Work samples</h2>
 
-                        <a class="work-nav__link mr-3" href="gerty.php">GERTY Design System</a>
+                        <a class="work-nav__link mr-3" href="gerty.html">GERTY Design System</a>
 
-                        <a class="work-nav__link mr-3" href="multisite.php">CPT Multisite</a>
+                        <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
-                        <a class="work-nav__link mr-3" href="themesplus.php">Themes Plus</a>
+                        <a class="work-nav__link mr-3" href="themesplus.html">Themes Plus</a>
 
-                        <a class="work-nav__link" href="driveby-app.php">Driveby Companion App</a>
+                        <a class="work-nav__link" href="driveby-app.html">Driveby Companion App</a>
 
                     </nav>
 
@@ -141,7 +141,7 @@
 
                         <h2 class="work-title text-white">GERTY<br> Design<br> System</h2>
 
-                        <a class="button" href="gerty.php">View Details</a>
+                        <a class="button" href="gerty.html">View Details</a>
 
                     </div>
 
@@ -167,7 +167,7 @@
 
                         <h2 class="work-title text-white">CPT<br> Multisite</h2>
 
-                        <a class="button" href="multisite.php">View Details</a>
+                        <a class="button" href="multisite.html">View Details</a>
 
                     </div>
 
