Mass search and replace for php to html

--- a/driveby-app.html
+++ b/driveby-app.html
@@ -73,7 +73,7 @@
 
                         <h1 class="header__logomark d-inline text-white mr-2 mr-sm-4"><a href="https://davedechant.com">Dave <span>Dechant</span></a></h1>
 
-                        <a class="header__link active mr-2" href="work.php">Work</a>
+                        <a class="header__link active mr-2" href="work.html">Work</a>
 
                         <a target="_blank" class="header__link" href="resume-dave-dechant.pdf">Resume</a>
 
@@ -111,13 +111,13 @@
 
                         <h2 class="work-nav__title text-white">Work samples</h2>
 
-                        <a class="work-nav__link mr-3" href="gerty.php">GERTY Design System</a>
+                        <a class="work-nav__link mr-3" href="gerty.html">GERTY Design System</a>
 
-                        <a class="work-nav__link mr-3" href="multisite.php">CPT Multisite</a>
+                        <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
-                        <a class="work-nav__link mr-3" href="themesplus.php">Themes Plus</a>
+                        <a class="work-nav__link mr-3" href="themesplus.html">Themes Plus</a>
 
-                        <a class="work-nav__link active" href="driveby-app.php">Driveby Companion App</a>
+                        <a class="work-nav__link active" href="driveby-app.html">Driveby Companion App</a>
 
                     </nav>
 
