--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
                         <h2 class="work-title text-white">Themes<br> Plus</h2>
 
-                        <a class="button" href="themesplus.php">View Details</a>
+                        <a class="button" href="themesplus.html">View Details</a>
 
                     </div>
 
@@ -219,7 +219,7 @@
 
                         <h2 class="work-title text-white">Driveby<br> Companion<br> App</h2>
 
-                        <a class="button" href="driveby-app.php">View Details</a>
+                        <a class="button" href="driveby-app.html">View Details</a>
 
                     </div>
 
