davedechant.com swapped with git url

--- a/driveby-app.html
+++ b/driveby-app.html
@@ -71,7 +71,7 @@
 
                     <div class="col-8">
 
-                        <h1 class="header__logomark d-inline text-white mr-2 mr-sm-4"><a href="https://davedechant.com">Dave <span>Dechant</span></a></h1>
+                        <h1 class="header__logomark d-inline text-white mr-2 mr-sm-4"><a href="https://davedechant.github.io">Dave <span>Dechant</span></a></h1>
 
                         <a class="header__link active mr-2" href="work.html">Work</a>
 
