--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 
     <head>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-6645091-26');
+        </script>
+
+
         <meta name="description" content="design portfolio of Dave Dechant">
 
         <title>Welcome to the design portfolio of Dave Dechant.</title>
@@ -39,18 +50,6 @@
         <meta name="msapplication-square150x150logo" content="images/icons/square.png"/>
         <meta name="msapplication-wide310x150logo" content="images/icons/wide.png"/>
         <meta name="msapplication-square310x310logo" content="images/icons/large.png"/>
-
-
-        <!-- Google Analytics Script -->
-
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-1"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-
-          gtag('config', 'UA-6645091-1');
-        </script>
 
 
         <!-- Force Old Browsers to Accept HTML5 -->
