Added ECC Desktop Project
Added new page and assets for ECC Desktop project

--- a/driveby-app.html
+++ b/driveby-app.html
@@ -111,6 +111,8 @@
 
                         <a class="work-nav__link mr-3" href="gerty.html">GERTY Design System</a>
 
+                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Service Console</a>
+
                         <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
                         <a class="work-nav__link mr-3" href="themesplus.html">Themes Plus</a>
