--- a/salesforce-product.html
+++ b/salesforce-product.html
@@ -18,7 +18,7 @@
 
         <title>Welcome to the design portfolio of Dave Dechant.</title>
 
-                <!-- Meta Info -->
+        <!-- Meta Info -->
 
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -99,9 +99,9 @@
 
                 <div class="row hero__container sample">
 
-                    <div class="hero__img multisite">
+                    <div class="hero__img salesforce">
 
-                        <img src="images/cpt-multisite-featured.png">
+                        <img src="images/ecc-desktop-case-screen.jpg">
 
                     </div>
 
@@ -111,9 +111,9 @@
 
                         <a class="work-nav__link mr-3" href="gerty.html">GERTY Design System</a>
 
-                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Service Console</a>
+                        <a class="work-nav__link mr-3 active" href="salesforce-product.html">Salesforce Service Console</a>
 
-                        <a class="work-nav__link active mr-3" href="multisite.html">CPT Multisite</a>
+                        <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
                         <a class="work-nav__link mr-3" href="themesplus.html">Themes Plus</a>
 
@@ -135,9 +135,9 @@
 
                     <div class="col-12">
 
-                        <h2 class="work-title text-white text-center">CPT Multisite</h2>
+                        <h2 class="work-title text-white text-center">Salesforce Service Console</h2>
 
-                        <small class="text-white text-center d-block mb-5"><strong>Tools:</strong> <i class="fas fa-drafting-compass"></i> Balsamic, <i class="fab fa-sketch"></i> Sketch, <i class="fab fa-invision"></i> Invision, <i class="fab fa-wordpress-simple"></i> WordPress, <i class="fab fa-adobe"></i> Adobe Creative Suite, <i class="fas fa-code"></i> Sublime Text</small>
+                        <small class="text-white text-center d-block mb-5"><strong>Tools:</strong> <i class="fas fa-drafting-compass"></i> Miro, <i class="fas fa-drafting-compass"></i> Balsamic, <i class="fas fa-bolt"></i> Lightning Design System, <i class="fab fa-sketch"></i> Sketch, <i class="fab fa-invision"></i> Invision, <i class="fab fa-adobe"></i> Adobe Creative Suite</small>
 
                     </div>
 
@@ -145,7 +145,7 @@
 
                         <h3 class="text-white">Problem</h3>
 
-                        <p class="text-white">ConversionPoint Technologies is made up of several subsidiaries. The websites for these entities and their products were inconsistent and updating them meant developer resources or logging into various Content Management Systems.</p>
+                        <p class="text-white">Securian customer service agents (CSAs) used myriad disparate systems to help customers. Besides difficulty cross-training between business units (BU), CSAs service time was ineffecient from the need to toggle between these systems.</p>
 
                     </div>
 
@@ -153,7 +153,7 @@
 
                         <h3 class="text-white">Solution</h3>
 
-                        <p class="text-white">The solutions came down to unifying not only the experience across the various websites, but also making it easier for people to access and make edits to the websites they were responsible for.</p>
+                        <p class="text-white">We worked directly with the CSAs and BU managers to see how they used current systems, performed system audits, and created current state service blueprints and userflows. This user research was used to create future state ecosystem flows and prototypes, with CSAs and key stakeholders involved throughout the entire process.</p>
 
                     </div>
 
@@ -161,7 +161,7 @@
 
                         <h3 class="text-white">Outcome</h3>
 
-                        <p class="text-white">Having experience creating WordPress multisites and with the help of my team, the CPT multisite was created. It takes advantage of a core theme to make experiences consistent, and users can login to a unified framework to edit any site.</p>
+                        <p class="text-white">Final deliverables and an initial three week sprint plan were presented to the Securian Agile team, BU managers, and project managers. Based on these deliverables and discovery findings, a scope of work for the build process was approved that same day.</p>
 
                     </div>
 
@@ -173,23 +173,9 @@
 
                     <div class="col-12">
 
-                        <h4 class="text-white text-center">Multisite Admin</h4>
+                    	<h4 class="text-white text-center">Service Blueprints & User Flows</h4>
 
-                        <img src="images/cpt-multisite-admin.png">
-
-                    </div>
-
-                </div>
-
-                <hr class="my-5">
-
-                <div class="row py-5">
-
-                    <div class="col-12">
-
-                        <h4 class="text-white text-center">ConversionPoint</h4>
-
-                        <img src="images/cpt-multisite-cpt.jpg">
+                        <img src="images/ecc-desktop-service-blueprint.png">
 
                     </div>
 
@@ -201,9 +187,9 @@
 
                     <div class="col-12">
 
-                        <h4 class="text-white text-center">ReTargeter</h4>
+                    	<h4 class="text-white text-center">Ecosystem Flows</h4>
 
-                        <img src="images/cpt-multisite-retargeter.jpg">
+                        <img src="images/ecc-desktop-ecosystem-flows.png">
 
                     </div>
 
@@ -215,9 +201,37 @@
 
                     <div class="col-12">
 
-                    	<h4 class="text-white text-center">Sellpoints</h4>
+                    	<h4 class="text-white text-center">Balsamiq Prototype Screen</h4>
 
-                        <img src="images/cpt-multisite-featured.png">
+                        <img src="images/ecc-desktop-balsamiq-case-screen.png">
+
+                    </div>
+
+                </div>
+
+                <hr class="my-5">
+
+                <div class="row py-5">
+
+                    <div class="col-12">
+
+                    	<h4 class="text-white text-center">Service Console Search Results</h4>
+
+                        <img src="images/ecc-desktop-search-results.png">
+
+                    </div>
+
+                </div>
+
+                <hr class="my-5">
+
+                <div class="row py-5">
+
+                    <div class="col-12">
+
+                    	<h4 class="text-white text-center">Service Console Case</h4>
+
+                        <img src="images/ecc-desktop-case-screen.jpg">
 
                     </div>
 
