--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@
 
                         <a class="work-nav__link mr-3" href="gerty.html">GERTY Design System</a>
 
+                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Service Console</a>
+
                         <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
                         <a class="work-nav__link mr-3" href="themesplus.html">Themes Plus</a>
@@ -147,6 +149,32 @@
                     <div class="col-12 col-lg-7 pr-lg-5 text-right">
 
                         <img src="images/gerty-design-system-featured.png">
+
+                    </div>
+
+                </div>
+
+            </div>
+                            
+        </section>
+
+        <section class="work">
+
+            <div class="container-fluid">
+
+                <div class="row">
+
+                    <div class="col-12 mb-4 col-lg-5 pl-xl-5">
+
+                        <h2 class="work-title text-white">Salesforce<br> Service<br> Console</h2>
+
+                        <a class="button" href="salesforce-product.html">View Details</a>
+
+                    </div>
+
+                    <div class="col-12 col-lg-7 pr-lg-5 text-right">
+
+                        <img src="images/ecc-desktop-case-screen.jpg">
 
                     </div>
 
