Salesforce Project Update

--- a/salesforce-product.html
+++ b/salesforce-product.html
@@ -135,7 +135,7 @@
 
                     <div class="col-12">
 
-                        <h2 class="work-title text-white text-center">Salesforce Service Console</h2>
+                        <h2 class="work-title text-white text-center">Salesforce Lightning Console</h2>
 
                         <small class="text-white text-center d-block mb-5"><strong>Tools:</strong> <i class="fas fa-drafting-compass"></i> Miro, <i class="fas fa-drafting-compass"></i> Balsamic, <i class="fas fa-bolt"></i> Lightning Design System, <i class="fab fa-sketch"></i> Sketch, <i class="fab fa-invision"></i> Invision, <i class="fab fa-adobe"></i> Adobe Creative Suite</small>
 
@@ -145,7 +145,7 @@
 
                         <h3 class="text-white">Problem</h3>
 
-                        <p class="text-white">Securian customer service agents (CSAs) used myriad disparate systems to help customers. Besides difficulty cross-training between business units (BU), CSAs service time was ineffecient from the need to toggle between these systems.</p>
+                        <p class="text-white">Securian customer service agents (CSAs) used myriad disparate systems to help customers. Besides difficulty cross-training between business units (BU), CSAs service time was ineffecient from the need to toggle between these systems. We were tasked with using Salesforce Lightning Console to consolidate these experiences.</p>
 
                     </div>
 
