--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
                     <div class="col-12 mb-4 col-lg-5 pl-xl-5">
 
-                        <h2 class="work-title text-white">Salesforce<br> Service<br> Console</h2>
+                        <h2 class="work-title text-white">Salesforce<br> Lightning<br> Console</h2>
 
                         <a class="button" href="salesforce-product.html">View Details</a>
 
