Updated Salesforce Project Title

--- a/gerty.html
+++ b/gerty.html
@@ -111,7 +111,7 @@
 
                         <a class="work-nav__link mr-3 active" href="gerty.html">GERTY Design System</a>
 
-                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Service Console</a>
+                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Lightning Console</a>
 
                         <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
