--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
                         <a class="work-nav__link mr-3" href="gerty.html">GERTY Design System</a>
 
-                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Service Console</a>
+                        <a class="work-nav__link mr-3" href="salesforce-product.html">Salesforce Lightning Console</a>
 
                         <a class="work-nav__link mr-3" href="multisite.html">CPT Multisite</a>
 
