Updated project screen titles

--- a/salesforce-product.html
+++ b/salesforce-product.html
@@ -215,7 +215,7 @@
 
                     <div class="col-12">
 
-                    	<h4 class="text-white text-center">Service Console Search Results</h4>
+                    	<h4 class="text-white text-center">Invision Prototype Screen</h4>
 
                         <img src="images/ecc-desktop-search-results.png">
 
@@ -229,7 +229,7 @@
 
                     <div class="col-12">
 
-                    	<h4 class="text-white text-center">Service Console Case</h4>
+                    	<h4 class="text-white text-center">Invision Prototype Screen</h4>
 
                         <img src="images/ecc-desktop-case-screen.jpg">
 
