--- a/new-portfolio/index.html
+++ b/new-portfolio/index.html
@@ -18,26 +18,26 @@
 
         <!-- Styles -->
 
-        <link href="/styles/fontawesome.css" rel="stylesheet" type="text/css">
-        <link href="/styles/styles.css" rel="stylesheet" type="text/css">
+        <link href="styles/fontawesome.css" rel="stylesheet" type="text/css">
+        <link href="styles/styles.css" rel="stylesheet" type="text/css">
         <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Spartan:400,500,700&display=swap" rel="stylesheet">
 
 
         <!-- Favicons/Icons -->
 
-        <link rel="shortcut icon" href="/images/icons/favicon.ico">
+        <link rel="shortcut icon" href="images/icons/favicon.ico">
 
-        <link rel="apple-touch-icon" href="/images/icons/touch-icon-iphone.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="/images/icons/touch-icon-ipad.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="/images/icons/touch-icon-iphone-retina.png" />
-        <link rel="apple-touch-icon" sizes="144x144" href="/images/icons/touch-icon-ipad-retina.png" />
+        <link rel="apple-touch-icon" href="images/icons/touch-icon-iphone.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="images/icons/touch-icon-ipad.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="images/icons/touch-icon-iphone-retina.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="images/icons/touch-icon-ipad-retina.png" />
 
         <meta name="application-name" content="Site Tile"/>
         <meta name="msapplication-TileColor" content="#000000"/>
-        <meta name="msapplication-square70x70logo" content="/images/icons/tiny.png"/>
-        <meta name="msapplication-square150x150logo" content="/images/icons/square.png"/>
-        <meta name="msapplication-wide310x150logo" content="/images/icons/wide.png"/>
-        <meta name="msapplication-square310x310logo" content="/images/icons/large.png"/>
+        <meta name="msapplication-square70x70logo" content="images/icons/tiny.png"/>
+        <meta name="msapplication-square150x150logo" content="images/icons/square.png"/>
+        <meta name="msapplication-wide310x150logo" content="images/icons/wide.png"/>
+        <meta name="msapplication-square310x310logo" content="images/icons/large.png"/>
 
 
         <!-- Google Analytics Script -->
