--- a/new-portfolio/united-healthcare.html
+++ b/new-portfolio/united-healthcare.html
@@ -136,9 +136,17 @@
 
             <div class="story-img-container">
 
-                <img class="story-img" src="images/sps-ecosystem-map.jpg"><br>
+                <img class="story-img" src="images/uhc-search.jpg"><br>
 
-                <span class="story-caption">caption</span>
+                <span class="story-caption">Initial Eligibility/Claim Lookup screen built in HTML/CSS/JS</span>
+                
+            </div>
+
+            <div class="story-img-container">
+
+                <img class="story-img" src="images/uhc-referral.jpg"><br>
+
+                <span class="story-caption">Eligibility &amp; Benefits screen built in HTML/CSS/JS. This&hellip; took a while.</span>
                 
             </div>
 
