--- a/gerty-design-system.html
+++ b/gerty-design-system.html
@@ -170,7 +170,7 @@
 
             <div class="story-img-container">
 
-                <img class="story-img" src="images/gerty-sketch.jpg" style="margin-bottom: 2rem;">
+                <img class="story-img" src="images/gerty-sketch.jpg" style="margin-bottom: 2rem;"><br>
 
                 <img class="story-img" src="images/gerty-product.jpg"><br>
 
