--- a/nintendo-review-app.html
+++ b/nintendo-review-app.html
@@ -152,7 +152,7 @@
 
             <div class="story-img-container switch-app-video">
 
-                <video autoplay loop>
+                <video autoplay="true" loop>
 
                     <source src="/videos/nintendo-switch-review-app.webm" type="video/webm">
                     <source src="/videos/nintendo-switch-review-app.mp4" type="video/mp4">
