--- a/about-dave-dechant.html
+++ b/about-dave-dechant.html
@@ -4,6 +4,16 @@
 
     <head>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-6645091-26');
+        </script>
+
         <meta name="description" content="XXX">
 
         <title>Design Stories | By Dave Dechant</title>
