Added Meta Data in Head

--- a/about-dave-dechant.html
+++ b/about-dave-dechant.html
@@ -14,9 +14,9 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
-        <meta name="description" content="XXX">
+        <meta name="description" content="Dave Dechant's Design Story">
 
-        <title>Design Stories | By Dave Dechant</title>
+        <title>Dave Dechant's Design Story</title>
 
         <!-- Meta Info -->
 
