--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
-        <meta name="description" content="XXX">
+        <meta name="description" content="Design Stories | By Dave Dechant">
 
         <title>Design Stories | By Dave Dechant</title>
 
