--- a/gerty-design-system.html
+++ b/gerty-design-system.html
@@ -14,9 +14,9 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
-        <meta name="description" content="XXX">
+        <meta name="description" content="Design Stories | GERTY Design System">
 
-        <title>Design Stories | By Dave Dechant</title>
+        <title>Design Stories | GERTY Design System</title>
 
         <!-- Meta Info -->
 
