--- a/securian.html
+++ b/securian.html
@@ -14,9 +14,9 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
-        <meta name="description" content="XXX">
+        <meta name="description" content="Design Stories | Securian Salesforce/Lightning Design System">
 
-        <title>Design Stories | By Dave Dechant</title>
+        <title>Design Stories | Securian Salesforce/Lightning Design System</title>
 
         <!-- Meta Info -->
 
