--- a/united-healthcare.html
+++ b/united-healthcare.html
@@ -14,9 +14,9 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
-        <meta name="description" content="XXX">
+        <meta name="description" content="Design Stories | UnitedHealthcare Code">
 
-        <title>Design Stories | By Dave Dechant</title>
+        <title>Design Stories | UnitedHealthcare Code</title>
 
         <!-- Meta Info -->
 
