--- a/nintendo-review-app.html
+++ b/nintendo-review-app.html
@@ -177,7 +177,7 @@
 
             <div class="story-copy">
 
-                <p>With this completed, my design journey could now continue with the knowledge that I'd gained a few skills and satisfied that experimental itch&hellips; for now.</p>
+                <p>With this completed, my design journey could now continue with the knowledge that I'd gained a few skills and satisfied that experimental itch&hellip; for now.</p>
                 
             </div>
 
