--- a/sps-commerce.html
+++ b/sps-commerce.html
@@ -174,9 +174,9 @@
 
         	<div class="story-copy">
 
-        		<p>We regrouped with the team at SPS Commerce and begin running through user scenarios and validating the lo-fidelity prototypes of our add-on ideas.</p>
+        		<p>We regrouped with the team at SPS Commerce and began running through user scenarios and validating the lo-fidelity prototypes of our add-on ideas.</p>
 
-        		<p>After some real talk and refining, we narrowed our add-ons down and begin work on our hi-fidelity prototypes that could be presented to customers, get validated as valuable, and then make a decision on moving forward with a build phase.</p>
+        		<p>After some real talk and refining, we narrowed our add-ons down and began work on our hi-fidelity prototypes that could be presented to customers, get validated as valuable, and then make a decision on moving forward with a build phase.</p>
         		
         	</div>
 
