--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                         <h1 class="header-menu-logo">Dave Dechant's Project Stories &amp; Experiments</h1>
 
-                        <a class="header-menu-link" href="#stories">Project Stories &amp; Experiments</a>
+                        <a class="header-menu-link" href="#stories">Project Stories <span class="mobile-hide">&amp; Experiments</span></a>
 
                         <a class="header-menu-link" href="about-dave-dechant.html">My Story</a>
                         
