--- a/sps-commerce.html
+++ b/sps-commerce.html
@@ -71,7 +71,7 @@
 
                         <h1 class="header-menu-logo"><a href="/">Dave Dechant's Project Stories &amp; Experiments</a></h1>
 
-                        <a class="header-menu-link active" href="/#stories">Project Stories &amp; Experiments</a>
+                        <a class="header-menu-link active" href="/#stories">Project Stories <span class="mobile-hide">&amp; Experiments</span></a>
 
                         <a class="header-menu-link" href="about-dave-dechant.html">My Story</a>
                         
