--- a/about-dave-dechant.html
+++ b/about-dave-dechant.html
@@ -105,7 +105,7 @@
 
             <h4 class="story-tools-title">Some Tools I Use:</h4>
 
-            <p class="story-tools">Microsoft Office, Optimal Workshop, Miro, Balsamiq, Sketch, InVision, Adobe Creative Suite, Sublime Text HTML/CSS/JS, CodeKit, BrowserStack</p>
+            <p class="story-tools">Microsoft Office, Optimal Workshop, Miro, Balsamiq, Sketch, InVision, Adobe Creative Cloud, Sublime Text HTML/CSS/JS, CodeKit, BrowserStack</p>
 
         </section>
 
