Added Analytics Plugin

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
+        <!-- Note: plugin scripts must be included after the tracking snippet. -->
+        <script src="https://ipmeta.io/plugin.js"></script>
+
+        <script>
+           provideGtagPlugin({
+              serviceProvider: 'dimension1',
+              networkDomain: 'dimension2',
+              networkType: 'dimension3',
+           });
+        </script>
+
 
         <!-- Force Old Browsers to Accept HTML5 -->
 
