--- a/united-healthcare.html
+++ b/united-healthcare.html
@@ -175,7 +175,7 @@
 
                 <p>During this project, my family and I moved from Minneapolis to Seattle. That said, I maintained a working relationship with the UHC team, and continued to update the front-end prototype.</p>
 
-                <p>Through this front-end prototype and user testing, the team was been able to gather insights and note improvements that were just not possible with the InVision prototype.</p>
+                <p>Through this front-end prototype and user testing, the team was able to gather insights and note improvements that were just not possible with the InVision prototype.</p>
                 
             </div>
 
