Updated back to home link

--- a/securian.html
+++ b/securian.html
@@ -80,7 +80,7 @@
 
                 <nav class="header-nav">
 
-                    <a href="index.html"><i class="fas fa-chevron-left"></i> Go back home</a>
+                    <a href="/"><i class="fas fa-chevron-left"></i> Go back home</a>
 
                     <a href="uhc.html">View next project <i class="fas fa-chevron-right"></i></a>
                     
