--- a/uhc.html
+++ b/uhc.html
@@ -82,7 +82,7 @@
 
                     <a href="/"><i class="fas fa-chevron-left"></i> Go back home</a>
 
-                    <a href="gerty.html">View next project <i class="fas fa-chevron-right"></i></a>
+                    <a href="wtp.html">View next project <i class="fas fa-chevron-right"></i></a>
                     
                 </nav>
 
