Small mobile updates

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
 
             <div class="row">
 
-                <p class="hero-block">In the past 10+ years I’ve designed everything from banner ads to pattern libraries. Interact with the vectors below and get to know me a bit, or check out some of <a href="#work">my work</a>.</p>
+                <p class="hero-block intro-desktop">In the past 10+ years I’ve designed everything from banner ads to pattern libraries. Interact with the vectors below and get to know me a bit, or check out some of <a href="#work">my work</a>.</p>
+
+                <p class="hero-block intro-mobile">In the past 10+ years I’ve designed everything from banner ads to pattern libraries. View the vectors below that represent some of my favorite things, or check out some of <a href="#work">my work</a>.</p>
 
             </div>
 
