--- a/gerty.html
+++ b/gerty.html
@@ -82,7 +82,7 @@
 
                     <a href="/"><i class="fas fa-chevron-left"></i> Go back home</a>
 
-                    <a href="sps-commerce.html">View next project <i class="fas fa-chevron-right"></i></a>
+                    <a href="securian.html">View next project <i class="fas fa-chevron-right"></i></a>
                     
                 </nav>
 
