--- a/uhc.html
+++ b/uhc.html
@@ -138,7 +138,7 @@
 
                 <h2 class="content-block-title">United Healthcare</h2>
 
-                <p class="hero-block"><span class="hero-block-decor-one"></span>Along my design journey, some of my stops demanded I learn what some designers consider a dark art&hellip; coding.<span class="hero-block-decor-two"></span></p>
+                <p class="hero-block"><span class="hero-block-decor-one"></span>Along my design journey, user research and testing can prove invaluable to improving the overall experience.<span class="hero-block-decor-two"></span></p>
 
                 <p class="description"><strong>Tools/Methodologies Used:</strong> User Research (Qualitative), Sketch, InVision, HTML/CSS/JS, GitHub</p>
 
