--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                     <div class="menu-item">
 
-                        <a href="#work">Work</a>
+                        <a href="#work">Work <i class="fas fa-chevron-down"></i></a>
 
                         <div class="menu-dropdown">
 
@@ -110,7 +110,7 @@
 
                     <div class="menu-item">
 
-                        <a href="#experiments">Experiments</a>
+                        <a href="#experiments">Experiments <i class="fas fa-chevron-down"></i></a>
 
                         <div class="menu-dropdown">
 
