Updates to overall styles, added top and bottom to project copy

--- a/stephen-king-anthology.html
+++ b/stephen-king-anthology.html
@@ -136,9 +136,9 @@
 
             <div class="row">
 
-                <h2 class="content-block-title">Stephen King Anthology App</h2>
+                <h2 class="content-block-title">Stephen King App</h2>
 
-                <p class="hero-block"><span class="hero-block-decor-one"></span>This is another jump into experimenting with an app I'd love to see/use. Digging through the King universe needs to be easier...<span class="hero-block-decor-two"></span></p>
+                <p class="hero-block"><span class="hero-block-decor-one"></span>Ka is a wheel. Seemingly neverending, just like the works of Stephen King. How could I best navigate and find my next adventure in the King universe?<span class="hero-block-decor-two"></span></p>
 
                 <p class="description"><strong>Tools/Methodologies Used:</strong> Figma, Quicktime</p>
 
@@ -152,9 +152,9 @@
 
                 <div class="project-copy">
 
-                    <p>Stephen King has always been one of my favorite go-to authors when I'm stuck looking for something to read. I'm especially fond of The Dark Tower series!</p>
+                    <p>Stephen King has always been one of my favorite go-to authors. When I'm stuck looking for something to read, I generally gravitate towards his works. I'm especially fond of The Dark Tower series and the books that are connected to it.</p>
 
-                    <p>Since I often find myself searching for quite some time to find which one of his myriad books to choose, I figured why not create a prototype for an application that would help me do just that.</p>
+                    <p>Since I often find myself spending a lot of time figuring which of his myriad books to choose, I decided to create a prototype for an application that would help me with that task.</p>
                     
                 </div>
 
