--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
                     <p>Here's looking forward to the journey that remains.</p>
 
-                    <p class="description"><strong>Skillset:</strong> Project/Client Consultation, Brand Identity, User Experience Design, Information Architecture, Responsive Website Design, Custom Wordpress Development, Strive for Accessibility, Cross Browser Support/Device Testing, Prototypes, Confident, Open to Critical Feedback</p>
+                    <p class="description"><strong>Skillset:</strong> Project/Client Consultation, Brand Identity, User Experience Design, Information Architecture, Design Systems, Responsive Website Design, Custom Wordpress Development, Strive for Accessibility, Cross Browser Support/Device Testing, Prototypes, Confident, Open to Critical Feedback</p>
 
                 </div>
 
