Updated browser/mobile tooltip

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                 <div class="vector tooltip-trigger">
 
-                    <span class="tooltip">I've designed countless websites at this point, but still love the challenge of building responsive experiences that work well across devices.</span>
+                    <span class="tooltip">I've designed countless website and product screens at this point, but still love the challenge of building responsive experiences that work well across devices.</span>
 
                     <img src="images/web-design-vector.svg">
                     
@@ -226,7 +226,7 @@
 
                 <div class="vector tooltip-trigger">
 
-                    <span class="tooltip">I've designed countless websites at this point, but still love the challenge of building responsive experiences that work well across devices.</span>
+                    <span class="tooltip">I've designed countless website and product screens at this point, but still love the challenge of building responsive experiences that work well across devices.</span>
 
                     <img src="images/web-design-vector.svg">
                     
