updated Securian's intro

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
                         <h3 class="project-summary-subtitle">Salesforce Lightning Prototype</h3>
 
-                        <p class="project-summary-copy">When you’ve been on myriad design adventures you pick up a skill or two. My team needed some front-end love and I was glad to help.</p>
+                        <p class="project-summary-copy">Securian’s customer service agents were using up to twelve different systems to help customers. That’s a lot. Enter Salesforce to the rescue.</p>
 
                         <a href="#securian">View case study <i class="fas fa-plus-circle"></i></a>
                         
