Updated Title & Meta

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 
     <head>
 
-        <meta name="description" content="XXX">
+        <meta name="description" content="Design Stories | By Dave Dechant">
 
-        <title>XXX</title>
+        <title>Design Stories | By Dave Dechant</title>
 
         <!-- Meta Info -->
 
