--- a/index.html
+++ b/index.html
@@ -43,7 +43,8 @@
         <!-- Google Analytics Script -->
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
-        <!--<script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>-->
+        
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
         <script>
           window.dataLayer = window.dataLayer || [];
           function gtag(){dataLayer.push(arguments);}
@@ -52,7 +53,9 @@
           gtag('config', 'UA-6645091-26');
         </script>
 
+
         <!-- Note: plugin scripts must be included after the tracking snippet. -->
+
         <script src="https://ipmeta.io/plugin.js"></script>
 
         <script>
