Added background icons

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
         <div class="wrapper">
 
+            <div class="controller-icons"></div>
+
             <header class="header">
 
                 <img class="dave-face" src="images/dave-illustrated.png">
