updated background icons

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
         <!-- Google Analytics Script -->
 
-        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <!-- Global site tag (gtag.js) - Google Analytics 
         
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-6645091-26"></script>
         <script>
@@ -51,7 +51,7 @@
           gtag('js', new Date());
 
           gtag('config', 'UA-6645091-26');
-        </script>
+        </script>-->
 
 
         <!-- Note: plugin scripts must be included after the tracking snippet. -->
